[package]
authors = ["The Rust Project Developers"]
name = "rustc_codegen_cranelift"
version = "0.0.0"

[lib]
name = "rustc_codegen_cranelift"
path = "lib.rs"
crate-type = ["dylib"]
test = false

[dependencies]
rustc = { path = "../librustc" }
rustc_errors = { path = "../librustc_errors" }
rustc_codegen_utils = { path = "../librustc_codegen_utils" }
syntax_pos = { path = "../libsyntax_pos" }
syntax = { path = "../libsyntax" }
rustc_codegen_ssa = { path = "../librustc_codegen_ssa" }
rustc_data_structures = { path = "../librustc_data_structures" }
rustc_target = { path = "../librustc_target" }
cranelift = "0.22.0"
